--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <!-- ПРАВАЯ ИЛЛЮСТРАЦИЯ -->
         <img src="petrunja1.jpeg" class="banner-illustration-right" alt="иллюстрация">
 
-        <h1 class="banner-title">Снежная книга — Заветная Мечта</h1>
+        <h1 class="banner-title">Зимние приключения в тайге</h1>
         <!-- КНОПКИ -->
         <div class="buttons">
             <a href="#" class="btn">Telegram</a>
