--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
         <div class="moon"></div>
 
         <!-- ЛЕВАЯ ИЛЛЮСТРАЦИЯ -->
-        <img src="veljesik1.jpeg" class="banner-illustration-left" alt="иллюстрация">
+        <img src="veljesik1.jpg" class="banner-illustration-left" alt="иллюстрация">
 
         <!-- ПРАВАЯ ИЛЛЮСТРАЦИЯ -->
-        <img src="petrunja1.jpeg" class="banner-illustration-right" alt="иллюстрация">
+        <img src="petrunja1.jpg" class="banner-illustration-right" alt="иллюстрация">
 
         <h1 class="banner-title">Зимние приключения в тайге</h1>
 
