--- a/index.html
+++ b/index.html
@@ -220,6 +220,59 @@ for (let i = 0; i < 120; i++) {
 
     </div>
 </header>
+<!-- О КНИГЕ -->
+<section>
+    <h2>О книге</h2>
+    <img src="Cover_Winter_Color.jpeg" class="section-img" alt="Обложка книги" />
+
+    <p>
+        «Заветная Мечта» — российская национальная премия в области детской литературы.
+        Учреждена в 2005 году Детским благотворительным фондом «Заветная мечта».
+        Здесь можно разместить отрывок или краткое описание книги.
+    </p>
+</section>
+
+<!-- О ПРЕМИИ -->
+<section>
+    <h2>О премии «Заветная Мечта»</h2>
+    <img src="award.jpeg" class="section-img" alt="Премия Заветная Мечта" />
+
+    <p>
+        Премия «Заветная Мечта» присуждается лучшим авторам современной детской литературы.
+        Она поддерживает талантливых писателей и помогает открывать новые имена.
+    </p>
+</section>
+
+<!-- ОБ АВТОРЕ -->
+<section>
+    <h2>Об авторе</h2>
+
+    <img src="author.jpg" class="section-img" alt="Автор книги" />
+
+    <p>
+        Здесь можно разместить информацию об авторе: биографию, достижения,
+        историю создания книги — всё, что тебе важно рассказать читателям.
+    </p>
+</section>
+
+<!-- ОТЗЫВЫ -->
+<section>
+    <h2>Отзывы</h2>
+
+    <div class="reviews">
+
+        <div class="review">
+            <img src="review1.jpeg" alt="читатель">
+            <p>«Книга заставила меня плакать и улыбаться одновременно. Сильное, доброе произведение!»</p>
+        </div>
+
+        <div class="review">
+            <img src="review2.jpeg" alt="читатель">
+            <p>«Я прочитала на одном дыхании. Это история, которая остаётся с тобой надолго.»</p>
+        </div>
+
+    </div>
+</section>
 
 </body>
 </html>
