--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ for (let i = 0; i < 120; i++) {
 <header class="winter-banner">
     <div class="moon"></div>
 
-    <img src="veljesik1.jpg" class="banner-illustration-left" alt="">
-    <img src="petrunja1.jpeg" class="banner-illustration-right" alt="">
+    <img src="veljesik2.jpg" class="banner-illustration-left" alt="">
+    <img src="petrunja2.jpeg" class="banner-illustration-right" alt="">
 
     <h1 class="banner-title">Зимние приключения в тайге</h1>
 
@@ -228,7 +228,7 @@ for (let i = 0; i < 120; i++) {
     <p>
         «Заветная Мечта» — российская национальная премия в области детской литературы.
         Учреждена в 2005 году Детским благотворительным фондом «Заветная мечта».
-        Здесь можно разместить отрывок или краткое описание книги.
+       
     </p>
 </section>
 
@@ -247,7 +247,7 @@ for (let i = 0; i < 120; i++) {
 <section>
     <h2>Об авторе</h2>
 
-    <img src="author.jpg" class="section-img" alt="Автор книги" />
+    <img src="authorfoto.jpg" class="section-img" alt="Автор книги" />
 
     <p>
         Здесь можно разместить информацию об авторе: биографию, достижения,
@@ -263,7 +263,7 @@ for (let i = 0; i < 120; i++) {
 
         <div class="review">
             <img src="review1.jpeg" alt="читатель">
-            <p>«Книга заставила меня плакать и улыбаться одновременно. Сильное, доброе произведение!»</p>
+            <p>«Книга заставила меня плакать и улыбаться одновременно. Сильная, добрая сказка!»</p>
         </div>
 
         <div class="review">
