--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ for (let i = 0; i < 120; i++) {
 <header class="winter-banner">
     <div class="moon"></div>
 
-    <img src="veljesik2.jpg" class="banner-illustration-left" alt="">
-    <img src="petrunja2.jpeg" class="banner-illustration-right" alt="">
+    <img src="veljesik2.png" class="banner-illustration-left" alt="">
+    <img src="petrunja2.png" class="banner-illustration-right" alt="">
 
     <h1 class="banner-title">Зимние приключения в тайге</h1>
 
@@ -247,7 +247,7 @@ for (let i = 0; i < 120; i++) {
 <section>
     <h2>Об авторе</h2>
 
-    <img src="authorfoto.jpg" class="section-img" alt="Автор книги" />
+    <img src="authorfoto1.jpg" class="section-img" alt="Автор книги" />
 
     <p>
         Здесь можно разместить информацию об авторе: биографию, достижения,
