--- a/index.html
+++ b/index.html
@@ -56,16 +56,35 @@ body {
 
 /* Заголовок поверх луны */
 .banner-title {
-    position: relative;
-    z-index: 5;
-    margin-top: 60px;
-    font-size: 54px;
+    position: absolute;
+    top: 30px; /* ВЫШЕ */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10; /* ПЕРЕКРЫВАЕТ ЛУНУ */
+    font-size: 64px;
     color: #e6f5ff;
-    text-shadow: 
-        0 0 12px #7cd5ff,
-        0 0 22px #b5e9ff,
-        0 0 42px #b5e9ff;
+    text-shadow:
+        0 0 15px #ffffff,
+        0 0 35px #b8eaff,
+        0 0 60px #aee0ff;
 }
+
+.banner-title::after {
+    content: "";
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 160%;
+    height: 70px;
+    background: radial-gradient(circle,
+        rgba(255,255,255,0.8),
+        rgba(255,255,255,0)
+    );
+    filter: blur(22px);
+    z-index: -1; /* Снежный шлейф под заголовком */
+}
+
 
 /* ================= ИЛЛЮСТРАЦИИ ================= */
 .banner-illustration-left,
