--- a/index.html
+++ b/index.html
@@ -15,16 +15,31 @@ body {
     background: #f3f8ff;
 }
 
+/* Автор */
+.author-photo {
+    width: 160px;
+    border-radius: 12px;
+    margin: 0 auto;
+    display: block;
+}
+
 /* ================= БАННЕР ================= */
+/* ================= БАННЕР С ФОНОМ ================= */
 .winter-banner {
     position: relative;
-    padding: 180px 20px 250px;
+    padding: 220px 20px 260px;
     text-align: center;
     color: white;
-    background: linear-gradient(to bottom, #061433 0%, #0d1d45 50%, #73c4ff 100%);
+
+    /* >>> Новый фон <<< */
+    background: url("fon.png") top center / cover no-repeat;
+
+    /* Лёгкое осветление фона, чтобы было теплее */
+    filter: brightness(1.18) saturate(1.12);
+
     overflow: hidden;
 
-    /* Мягкий сугроб снизу */
+    /* Мягкий сугроб снизу — оставить */
     clip-path: polygon(
         0% 0%, 
         100% 0%, 
@@ -45,7 +60,7 @@ body {
     transform: translateX(-50%);
     width: 160px;
     height: 160px;
-    background: radial-gradient(circle, #fff8d2 10%, #ffd973 45%, #c8a23b 70%, transparent 100%);
+    : radial-gradient(circle, #fff8d2 10%, #ffd973 45%, #c8a23b 70%, transparent 100%);
     border-radius: 50%;
     box-shadow:
         0 0 55px 25px rgba(255, 225, 150, 0.5),
@@ -77,7 +92,7 @@ body {
     transform: translateX(-50%);
     width: 160%;
     height: 70px;
-    background: radial-gradient(circle,
+    : radial-gradient(circle,
         rgba(255,255,255,0.8),
         rgba(255,255,255,0)
     );
@@ -90,19 +105,19 @@ body {
 .banner-illustration-left,
 .banner-illustration-right {
     position: absolute;
-    bottom: 0;
-    width: 180px;
-    opacity: 0.87;
-    filter: drop-shadow(0 0 22px rgba(230, 230, 255, 0.4)) brightness(1.1);
-    z-index: 4;
+    bottom: 15px;
+    width: 260px; /* больше */
+    opacity: 0.92;
+    filter: drop-shadow(0 0 25px rgba(255,255,255,0.55)) brightness(1.12);
+    z-index: 6;
 }
 
 .banner-illustration-left {
-    left: 3%;
+    left: 2%;
 }
 
 .banner-illustration-right {
-    right: 3%;
+    right: 2%;
 }
 
 /* ================= ПАДАЮЩИЙ СНЕГ ================= */
@@ -110,7 +125,7 @@ body {
     position: fixed;
     top: -10px;
     border-radius: 50%;
-    background: rgba(255,255,255,0.9);
+    : rgba(255,255,255,0.9);
     pointer-events: none;
     z-index: 9999;
     animation: fall linear infinite, sway ease-in-out infinite;
@@ -139,7 +154,7 @@ body {
 
 .btn {
     position: relative;
-    background: linear-gradient(to bottom, #4093ff, #0b3570);
+    : linear-gradient(to bottom, #4093ff, #0b3570);
     color: white;
     padding: 14px 26px;
     border-radius: 16px;
@@ -165,7 +180,7 @@ body {
     left: 0;
     width: 100%;
     height: 22px;
-    background: url('data:image/svg+xml;utf8,<svg width="200" height="40" xmlns="http://www.w3.org/2000/svg"><path d="M0 25 Q20 5 40 20 T80 15 T120 20 T160 10 T200 25 L200 40 L0 40 Z" fill="white"/></svg>') no-repeat center/100% 100%;
+    : url('data:image/svg+xml;utf8,<svg width="200" height="40" xmlns="http://www.w3.org/2000/svg"><path d="M0 25 Q20 5 40 20 T80 15 T120 20 T160 10 T200 25 L200 40 L0 40 Z" fill="white"/></svg>') no-repeat center/100% 100%;
     opacity: 0.95;
 }
 
@@ -266,7 +281,7 @@ for (let i = 0; i < 120; i++) {
 <section>
     <h2>Об авторе</h2>
 
-    <img src="authorfoto1.jpg" class="section-img" alt="Автор книги" />
+    <img src="authorfoto1.jpg" class="author-photo" alt="Автор книги" />
 
     <p>
         Здесь можно разместить информацию об авторе: биографию, достижения,
