--- a/index.html
+++ b/index.html
@@ -119,7 +119,12 @@ body {
 .banner-illustration-right {
     right: 2%;
 }
-
+/* Центрирование всех секций */
+section {
+    max-width: 900px;
+    margin: 0 auto;
+    text-align: center;
+}
 /* ================= ПАДАЮЩИЙ СНЕГ ================= */
 .snow span {
     position: fixed;
