--- a/index.html
+++ b/index.html
@@ -125,27 +125,42 @@ section {
     margin: 0 auto;
     text-align: center;
 }
-/* ================= ПАДАЮЩИЙ СНЕГ ================= */
-.snow span {
+/* ===== LANGSAM FALLENDER SCHNEE ===== */
+.slow-snow {
     position: fixed;
-    top: -10px;
-    border-radius: 50%;
-    : rgba(255,255,255,0.9);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     pointer-events: none;
+    overflow: hidden;
     z-index: 9999;
-    animation: fall linear infinite, sway ease-in-out infinite;
 }
 
-@keyframes fall {
+.snowflake {
+    position: absolute;
+    top: -10px;
+    width: 10px;
+    height: 10px;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.9;
+    filter: blur(1px);
+    animation: slowFall linear infinite,
+               slowDrift ease-in-out infinite;
+}
+
+@keyframes slowFall {
     0% { transform: translateY(-10px); opacity: 1; }
     100% { transform: translateY(110vh); opacity: 0.3; }
 }
 
-@keyframes sway {
+@keyframes slowDrift {
     0% { transform: translateX(0); }
-    50% { transform: translateX(30px); }
+    50% { transform: translateX(35px); }
     100% { transform: translateX(0); }
 }
+
 
 /* ================= КНОПКИ ================= */
 .buttons {
