--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
     color: white;
 
     /* >>> Новый фон <<< */
-    background: url("fon5.png") top center / cover no-repeat;
+    background: url("fon.png") top center / cover no-repeat;
 
     /* Лёгкое осветление фона, чтобы было теплее */
     filter: brightness(1.18) saturate(1.12);
